# LLMInferenceRouter

./: .gitignore  Makefile  README.md  inference-router-README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: sample-cost-report.md
decisions/: 0001-cost-per-successful-request.md  0002-difficulty-routing.md  0003-multi-provider.md  0004-failover-policy.md  0005-budget-governance.md  0006-caching.md  0007-quality-gate.md  0008-build-vs-buy.md
docs/: 0001-provider-abstraction.md  0002-cascade-routing-policy.md  0003-fallback-and-circuit-breaking.md  architecture.md
evals/: README.md  __init__.py  golden_cases.json  golden_runner.py  quality_invariants.py
src/: README.md  __init__.py  budget.py  cache.py  cost.py  providers.py  request.py  router.py
tests/: test_budget.py  test_cache.py  test_golden.py  test_quality_invariants.py  test_router.py
