[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-router"
version = "0.1.0"
description = "Reference slice: cost-aware cascade router, budget gate, and eval harness for multi-provider LLM inference."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["src", "evals"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
