[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-inference-router"
version = "0.1.0"
description = "Cascaded multi-provider LLM routing with cost-vs-quality benchmarking"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.setuptools]
packages = ["src", "evals"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
